test/fixtures/configs/elements/patch/fail/payload/missingAll.js
module.exports = {
  url: '/users/1/projects/1/pages/1/elements/1',
  method: 'patch',
  headers: {
    authorization: 'token userToken'
  },
  payload: {}
};
